# gui-reaper

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  ProcessTable.jsx  SettingsDropdown.jsx  ThemeChanger.jsx  TitleBar.jsx  main.jsx  styles.js  utils.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: kill_process.rs  lib.rs  list_process.rs  main.rs
