[package]
name = "gui-reaper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gui_reaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.36.0"
serde_json = "1"
libc = "0.2.174"
thiserror = "2.0.12"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.15"
rayon = "1.10.0"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_System_Threading", "Win32_System_JobObjects"] }
windows = { version = "0.61.3", features = ["Win32_System_JobObjects"] }
[target.'cfg(unix)'.dependencies]
nix = "0.27"
